...

        <EditText
            android:id="@+id/edit_text_event_name"
            android:layout_width="match_parent"
            android:layout_height="50dp"
...

        <EditText
            android:id="@+id/edit_text_event_description"
            android:layout_width="match_parent"
            android:layout_height="50dp"
...

        <EditText
            android:id="@+id/edit_text_event_location"
            android:layout_width="match_parent"
            android:layout_height="50dp"
...

        <EditText
            android:id="@+id/edit_text_event_start_date"
            android:layout_width="0dp"
            android:layout_height="50dp"
...
            android:textColor="@color/grey"
            android:textSize="14sp"
            app:layout_constraintEnd_toStartOf="@id/edit_text_event_start_time"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/event_start_date_label"/>
...

        <EditText
            android:id="@+id/edit_text_event_end_date"
            android:layout_width="0dp"
            android:layout_height="50dp"
...
            android:textColor="@color/grey"
            android:textSize="14sp"
            app:layout_constraintEnd_toStartOf="@id/edit_text_event_end_time"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/event_end_date_label"/>
...
            android:textSize="16sp"
            android:paddingTop="16dp"
            app:layout_constraintStart_toStartOf="@id/edit_text_registration_start_time"
            app:layout_constraintTop_toBottomOf="@id/header_registration_info" />

        <!-- Registration Start Date Input-->
        <EditText
            android:id="@+id/edit_text_registration_start_date"
            android:layout_width="0dp"
            android:layout_height="50dp"
...
            android:textSize="16sp"
            android:paddingTop="16dp"
            app:layout_constraintStart_toStartOf="@id/edit_text_registration_end_time"
            app:layout_constraintTop_toBottomOf="@id/edit_text_registration_start_date" />

        <!-- Registration End Date Input -->
        <EditText
            android:id="@+id/edit_text_registration_end_date"
            android:layout_width="0dp"
            android:layout_height="50dp"
...

        <EditText
            android:id="@+id/edit_text_max_attendees"
            android:layout_width="match_parent"
            android:layout_height="50dp"
...

        <EditText
            android:id="@+id/edit_text_waiting_list_limit"
            android:layout_width="match_parent"
            android:layout_height="50dp"
...
        <!-- Geolocation Requirement -->
        <CheckBox
            android:id="@+id/checkbox_geolocation"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
...
        <!-- ==== SAVE BUTTON ==== -->
        <Button
            android:id="@+id/button_save"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
...
