...
        android:label="Home">
        <action
            android:id="@+id/action_homeFragment_to_organizerEventPageFragment"
            app:destination="@id/organizerEventPageFragment" />
        <action
            android:id="@+id/action_homeFragment_to_createEventFragment"
            app:destination="@id/createEventFragment" />
        <action
            android:id="@+id/action_homeFragment_to_userProfileFragment"
            app:destination="@id/userProfileFragment" />
    </fragment>

    <fragment
...
